--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-window": "1.8.6"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.5",
     "@babel/eslint-parser": "7.17.0",
     "@babel/preset-react": "7.16.7",
     "@next/eslint-plugin-next": "^12.1.0",
