--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "lint": "eslint --fix \"src/**/*.{js,jsx}\"",
     "lint:check": "eslint \"src/**/*.{js,jsx}\"",
     "prepare": "husky install",
-    "pre-commit": "lint-staged"
+    "pre-commit": "lint-staged",
+    "test": "jest --watch"
   },
   "dependencies": {
     "axios": "0.26.0",
     "classnames": "2.3.1",
-    "next": "12.0.8",
+    "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-highlight-words": "0.17.0",
@@ -23,10 +24,13 @@
     "react-window": "1.8.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.5",
+    "@babel/core": "7.17.5",
     "@babel/eslint-parser": "7.17.0",
     "@babel/preset-react": "7.16.7",
-    "@next/eslint-plugin-next": "^12.1.0",
+    "@next/eslint-plugin-next": "12.1.0",
+    "@testing-library/jest-dom": "5.16.2",
+    "@testing-library/react": "12.1.3",
+    "@testing-library/user-event": "13.5.0",
     "autoprefixer": "10.4.2",
     "eslint": "8.10.0",
     "eslint-config-airbnb": "19.0.4",
@@ -35,14 +39,15 @@
     "eslint-plugin-jest-dom": "4.0.1",
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-react": "7.29.1",
+    "eslint-plugin-react": "7.29.2",
     "eslint-plugin-react-hooks": "4.3.0",
     "eslint-plugin-testing-library": "5.0.5",
     "husky": "7.0.4",
+    "jest": "27.5.1",
     "lint-staged": "12.3.4",
-    "postcss": "8.4.5",
+    "postcss": "8.4.7",
     "prettier": "2.5.1",
-    "tailwindcss": "3.0.16"
+    "tailwindcss": "3.0.23"
   },
   "lint-staged": {
     "*.{js,ts,tsx,jsx}": [
